# MC_Computer_Assembler

./: .gitignore  CMakeLists.txt  README.md  debug_output.txt  output.txt  outputCommand.txt  package-lock.json
demo_programs/: demo_branching.asm  sum_two_numbers.asm
schematics/: ComputerV1-2BitMemory.litematic  Feedtape2.litematic  FullComputerV1-3.litematic
scripts/: generate_nbt.py  pyproject.toml
src/: assembler.cpp  assembler.h  emulator.cpp  emulator.h  main.cpp
tests/: CMakeLists.txt  test.asm  test_assembler.cpp  test_increment_tape.asm  test_jump_to_skz.asm  test_multiple_macros.asm  test_nested_macros.asm  test_recursive.asm  test_recursive_skz.asm  test_set_tape.asm  test_simple_inline.asm  test_single_opcode.asm  test_turing_complete.asm  test_xor_inc.asm
world_file/: ComputerWithInput.litematic  FullComputerFinal2.litematic
